<resources>
    <string name="app_name">VU Wearable</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vu_logo_content_desc">VU Logo</string>
    <string name="pd_connection_status">Connected</string>
    <string name="pd_recording_status">Recording Not Started</string>
    <string name="pd_time_status">Time out of date</string>
    <string name="pd_electrodes_status">All Electrodes attached</string>
    <string name="success_icon_content_desc">success icon</string>
    <string name="time_icon_content_desc">time icon</string>
    <string name="content_desc_placeholder">TODO</string>
    <string name="pd_system_status_title">SYSTEM STATUS</string>
    <string name="pd_current_system_time">Current System Time:\n %s</string>
    <string name="pd_update_time">UPDATE TIME</string>
    <string name="pd_start_btn">START</string>
    <string name="pd_stop_btn">STOP</string>
    <string name="pd_view_faq">VIEW FAQ</string>
    <string name="pd_view_live_data">VIEW LIVE DATA</string>
    <string name="pd_set_tester_id">SET TESTER ID</string>
    <string name="pd_set_tester_title">Set Tester ID</string>
    <string name="st_tester_id_hint">Tester ID</string>
    <string name="dialog_ok_button">OK</string>
    <string name="pd_test_id">Tester ID: %s</string>
    <string name="tester_id_err">You filled in an empty ID</string>

    <string name="heart_rate_number">120</string>
    <string name="heart_rate_bpm">bpm</string>
    <string name="steps_number">%f</string>
    <string name="steps_string">Steps</string>
    <string name="pressure_number">%f</string>
    <string name="pressure_string">hPa</string>
    <string name="battery_life">Battery</string>
    <string name="wifi_connection">wifi is connected</string>
    <string name="electrode_connection">electrode 5 disconnected</string>
    <string name="welcome">Welcome</string>
    <string name="battery_life_string">Battery</string>
    <string name="battery_life_value">53%</string>
    <string name="profile_name">Firstname</string>
    <string name="faq">FAQ</string>
    <string name="more_info">Answer on general questions</string>
    <string name="wifi">WIFI</string>
    <string name="recording_connection">recording is active</string>
    <string name="time_calibration">time is calibrated correctly</string>
    <string name="faq_button">Click here</string>
    <string name="tips_icon">tips_icon</string>
    <string name="correct">correct</string>
    <string name="warning">warning</string>
    <string name="toolbar">toolbar</string>
    <string name="login_to_professor">Login to researcher account</string>
    <string name="login">Login</string>
    <string name="yes">Yes</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Are you sure you want to switch back to a participant account?</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="input_is_empty">Please fill in the input field</string>
    <string name="incorrect_code">Filled in an incorrect code</string>
    <string name="login_successful">Login successful</string>
    <string name="logout_successful">Logout successful</string>
    <string name="title_chart">Chart</string>
    <string name="chart_information_placeholder">Chart Information</string>
    <string name="connection_success">Connected</string>
    <string name="connection_failed">Not Connected</string>
    <string name="set_issue_title">This issue</string>
    <string name="issue_dialog">%s</string>
    <string name="no_data_connection">No Data</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="password">Password</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="fix_connection">Return to the app and reconnect the device</string>
    <string name="fix_issue_notification">fix issue</string>
    <string name="title_faq">Faq</string>
    <string name="for_the_faq_page">For the FAQ page</string>
    <string name="continue_splash">Choose one of the options below</string>
    <string name="welcome_splash">Welcome to the vu-ams app</string>
    <string name="guide_step">How to connect electrodes</string>
    <string name="guide_finish_button">Finish</string>
    <string name="breathing_excercise">Breathing</string>
    <string name="delay">Delay</string>
    <string name="breathe_out">Breathe out</string>
    <string name="duration">Max Duration</string>
    <string name="breathe_in">Breathe in</string>
    <string name="Start">Start</string>
    <string name="inhale">Inhale</string>
    <string name="breathing_image">breathing_image</string>
    <string name="seconds">%d Second(s)</string>
    <string name="minutes">%d Minute(s)</string>
    <string name="pause">Pause</string>
    <string name="guide_explanation">In order to receive the data correctly, you need to have all the electrodes on your body connected properly. \n\nLook at the images to see where you need to connect the electrodes.\n\nMatch the electrode colors with the image where it needs to be placed.</string>
    <string name="ECG">ECG</string>
    <string name="ICG">ICG</string>
    <string name="exercise_finished">Exercise Completed!</string>
    <string name="chart_placeholder">Chart</string>
    <string name="chart_sub_placeholder">Live-data ECG and ICG charts</string>
    <string name="breathing_placeholder">Breathing</string>
    <string name="breathing_sub_placeholder">Biometric breathing exercises</string>
    <string name="setup_placeholder">Setup</string>
    <string name="setup_sub_placeholder">Guide for applying the wearable</string>
    <string name="system_placeholder">System</string>
    <string name="system_sub_placeholder">Configuring device settings</string>
    <string name="faq_placeholder">FAQ</string>
    <string name="faq_sub_placeholder">Find answers for general questions</string>
    <string name="wifi_placeholder">WiFi</string>
    <string name="wifi_sub_placeholder">You are connected to the device</string>
    <string name="device_settings_heading">Device Configurator</string>
    <string name="start_placeholder">START</string>
    <string name="livedata_placeholder">Receive the measured data</string>
    <string name="stop_placeholder">STOP</string>
    <string name="measurement_placeholder">Start or stop measuring on the device</string>

    <string name="location_prompt_title">Location Permission Needed</string>
    <string name="location_prompt_explanation">This app needs the Precise Location Permission to determine if you are connected
        to the correct network, your actual location information is not used in this application.
        Please accept this in the next prompt to use all Network Functionalities.
    </string>
    <string name="location_accepted">Thank you! Checking the network status..</string>
    <string name="location_denied">Location Permission Denied</string>
    <string name="location_denied_explanation">
        Access to your precise location has been denied. Some functionalities may not work correctly,
        such as the current network status.
    </string>
    <string name="location_denied_change_settings_btn">Change Settings</string>
    <string name="location_denied_proceed_btn">Proceed</string>

    <string name="starting_receiving_data">Started receiving data</string>
    <string name="stopped_receiving_data">Stopped receiving data</string>
    <string name="starting_measuring">Started measuring</string>
    <string name="stopped_measuring">Stopped measuring</string>
    <string name="shutdown_device_confirm">Turned off device</string>
    <string name="shutdown_device_btn_txt">Turn Off</string>
    <string name="shut_down_device_txt">Shut down device</string>
    <string name="powered_by_scichart">Powered by SciChart</string>

</resources>
