<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.professordashboard.ProfessorDashboardFragment">

    <ImageView
        android:id="@+id/vuLogoHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logos06"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/vu_logo_content_desc"
        android:scaleX="2"
        android:scaleY="2"
        />

    <TextView
        android:id="@+id/txtSystemStatusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pd_system_status_title"
        android:fontFamily="@font/heebo_black"
        android:textSize="20sp"
        android:textColor="@color/system_blue"
        app:layout_constraintStart_toStartOf="@id/vuLogoHeader"
        app:layout_constraintTop_toBottomOf="@id/vuLogoHeader"
        android:layout_marginTop="0dp"
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/systemStatusBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSystemStatusTitle"
        app:layout_constraintStart_toStartOf="@id/vuLogoHeader"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_blue"
        android:outlineProvider="none"
    >

        <ImageView
            android:id="@+id/iconConnection"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/connected"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/content_desc_placeholder"
        />

        <TextView
            android:id="@+id/txtConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd_connection_status"
            android:fontFamily="@font/heebo_bold"
            android:textSize="18sp"
            android:textColor="@color/success"
            android:layout_marginTop="23dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
        />

        <ImageView
            android:id="@+id/iconRecording"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/ic_baseline_av_timer_24"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            app:tint="@color/system_warning"
            android:contentDescription="@string/content_desc_placeholder"
        />

        <TextView
            android:id="@+id/txtRecordingStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd_recording_status"
            android:fontFamily="@font/heebo_bold"
            android:textSize="18sp"
            android:textColor="@color/system_warning"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
        />


        <ImageView
            android:id="@+id/iconTime"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/ic_baseline_access_time_24"
            android:layout_marginTop="80dp"
            android:layout_marginStart="10dp"
            app:tint="@color/system_error"
            android:contentDescription="@string/time_icon_content_desc"
        />

        <TextView
            android:id="@+id/txtTimeStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd_time_status"
            android:fontFamily="@font/heebo_bold"
            android:textSize="18sp"
            android:textColor="@color/system_error"
            android:layout_marginTop="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
        />


        <ImageView
            android:id="@+id/iconElectrodes"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/ic_baseline_check_circle_24"
            android:layout_marginTop="110dp"
            android:layout_marginStart="10dp"
            app:tint="@color/success"
            android:contentDescription="@string/success_icon_content_desc"
        />

        <TextView
            android:id="@+id/txtElectrodesStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd_electrodes_status"
            android:fontFamily="@font/heebo_bold"
            android:textSize="18sp"
            android:textColor="@color/success"
            android:layout_marginTop="110dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
        />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtSystemTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/systemStatusBlock"
        android:fontFamily="@font/heebo_medium"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/pd_current_system_time"
    />

    <TextView
        android:id="@+id/txtTestId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSystemTime"
        android:fontFamily="@font/heebo_medium"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:text="@string/pd_test_id"
    />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvStartBlock"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtTestId"
        app:layout_constraintStart_toStartOf="@id/vuLogoHeader"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_turquoise"
        android:outlineProvider="none"
    >

        <ImageView
            android:id="@+id/iconStart"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_baseline_play_arrow_24"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/content_desc_placeholder"
            app:tint="@color/turquoise"
        />

        <TextView
            android:id="@+id/txtStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd_start_btn"
            android:fontFamily="@font/heebo_bold"
            android:textSize="25sp"
            android:textColor="@color/turquoise"
            android:layout_marginTop="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="20dp"
        />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUpdateTimeBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cvStartBlock"
        app:layout_constraintTop_toTopOf="@id/cvStartBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/bg_purple"
        android:outlineProvider="none"
    >

        <ImageView
            android:id="@+id/iconTimeUpdate"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_baseline_access_time_24"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/content_desc_placeholder"
            app:tint="@color/purple"
        />

        <TextView
            android:id="@+id/txtUpdateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd_update_time"
            android:fontFamily="@font/heebo_bold"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
        />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnTesterId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/cvStartBlock"
        app:layout_constraintStart_toStartOf="@id/cvStartBlock"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/pd_set_tester_id"
        android:textSize="16sp"
        android:fontFamily="@font/heebo_bold"
        android:backgroundTint="@color/bg_black"
        app:cornerRadius="10dp"
    />

    <Button
        android:id="@+id/btnLiveData"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/btnTesterId"
        app:layout_constraintStart_toStartOf="@id/btnTesterId"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/pd_view_live_data"
        android:textSize="16sp"
        android:fontFamily="@font/heebo_bold"
        android:backgroundTint="@color/bg_black"
        app:cornerRadius="10dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>